--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -3,11 +3,11 @@
 
 ## Regulation of gene expression
 
-Each cell in our body originate from the same fertilized stem cell and has therefore virtually the same genome. However, different cell types have distinct morphologies and fulfill diverse functions. This diversity is archived by expressing only a subset of genes to a specific extent for any cell type, developmental state, and environmental condition. Gene expression is therefore complex and controlled on many molecular levels [@Lelli2012]. 
+Each cell in our body originate from the same fertilized stem cell and has therefore virtually the same genome. However, different cell types have distinct morphological and fulfill diverse functions. This diversity is archived by expressing only a subset of genes to a specific extent for any cell type, developmental state, and environmental condition. Gene expression is therefore complex and controlled on many molecular levels [@Lelli2012]. 
 
 The genomic DNA sequence itself encodes cis-regulatory modules (CRMs) to which transcription factors (TFs) bind by recognizing specific DNA sequence motifs. TFs often form complexes with other proteins and DNA. However, TF binding and CRM assembly require often specific epigenetic states of chromatin. Epigenetic modifications of DNA, such as methylation,  influence the ability of TF to bind DNA at enhancers and promoters. The chromatin structure and accessibility itself also determines if a gene can be transcribed. While so-called pioneering factors can bind closed chromatin that is wrapped around nucleosomes and remodel it to make it accessible for other TFs that require open chromatin and specific post-translational histone modifications to bind enhancers and promoters and regulate target gene expression. 
 
-Another layer in gene regulation is the three-dimensonal foldig structure of chromatin in the nucleus. 
+Another layer in gene regulation is the three-dimensional folding structure of chromatin in the nucleus. 
 However, most of the cell-type specific gene regulation that accounts for cell differentiation in development and morphological diversification in evolution, are driven by activation changes of enhancers [@Long2016].
 
 
@@ -130,7 +130,7 @@ normalization strategies for Hi-C contacts introduce variability [@Forcato2017].
 Therefore, the number and size of TADs varies between different studies and cannot be directly compared. 
 
 The first studies on TADs identified around 3000 TADs in human and mouse genomes with a median size of ~800 kb [@Dixon2012] and ~100 kb in *Drosophila* genomes [@Sexton2012].
-Analysis of 1kb or 5kb resolution Hi-C matrixes resulted in nested "contact domains" 
+Analysis of 1kb or 5kb resolution Hi-C matrices resulted in nested "contact domains" 
 with a median size of 185 kb (range 40 kb - 3 Mb) in human and mouse cells [@Rao2014].
 
 Importantly, TADs might be equivalent to "chromatin domains" of 10 kb - 1 Mb in size detected by microscopy approaches [@Cremer2010; @Gibcus2013]. Another connection of Hi-C derived interaction maps with previous microscopy observations, is that TADs in *Drosophila* correspond to bands of polytene chromosomes [@Eagen2015].
@@ -143,7 +143,7 @@ and house-keeping genes [@Dixon2012].
 Furthermore, TADs correspond to regions of early and late replication timing [@Pope2014; @Dileep2015] and lamina associated domains (LADs) [@Dixon2012].
 Importantly, enhancer-promoter interactions seems to be mostly constrained within TADs [@Shen2012]
 
-Alltogether, there is accumulating evidence that TADs are fundamental units of chromosome organization [@Dixon2016]
+Altogether, there is accumulating evidence that TADs are fundamental units of chromosome organization [@Dixon2016]
 
 
 
@@ -151,26 +151,26 @@ Alltogether, there is accumulating evidence that TADs are fundamental units of c
 
 In summary, these findings suggest a hierarchical organization of chromosome architecture. First, dynamic nucleosome contacts from clutches and fibers. 
 These engage in long-range chromatin loops, some of which are stabilized by architectural proteins, such as CTCF and cohesin, and lead to the formation of TADs.
-TADs in form cluster by their epi-genomic type into A/B compartments and coalescence of compartments in the same chromosome forms chromosome territories [@Bonev2016]. 
+TADs in form cluster by their epigenomic type into A/B compartments and coalescence of compartments in the same chromosome forms chromosome territories [@Bonev2016]. 
 
 ## Dynamics of chromatin structure
-It is important to keep in mind how chromosome folding change during cell division. Spatial organization is geerally studied in non-synchronous cells, of which interphase cells make up the biggest proportion [@Bouwman2015].
-In interphase, chromosomes are decondenced and hierarchically orgnized into the territories, compartemtns, and TADs as decribed above. 
-To prepare for cell division chromosomes untangel and condense, while transcritpion ceases almost entirely. Miotic chromosomes do not show prefferential organization, such as compartments or TAS [@Naumova2013]. Enhancer-promoter looping might absenct as well [@Dekker2014].
-After cell division, chromosomes decondense and fold into the interphase hierarchy. While individual genes are realtively mobile during early G1 phase, they become quickly constrained to a small nuclear subvolume, after which genome fodling is relatively stable for the rest of the interphase [@Shubb2002; @Walter2003].
+It is important to keep in mind how chromosome folding change during cell division. Spatial organization is generally studied in non-synchronous cells, of which interphase cells make up the biggest proportion [@Bouwman2015].
+In interphase, chromosomes are decondenced and hierarchically organized into the territories, compartments, and TADs as described above. 
+To prepare for cell division chromosomes untangle and condense, while transcription ceases almost entirely. Mitotic chromosomes do not show preferential organization, such as compartments or TAS [@Naumova2013]. Enhancer-promoter looping might absent as well [@Dekker2014].
+After cell division, chromosomes decondense and fold into the interphase hierarchy. While individual genes are relatively mobile during early G1 phase, they become quickly constrained to a small nuclear sub-volume, after which genome folding is relatively stable for the rest of the interphase [@Shubb2002; @Walter2003].
 
 - The topological organization of chromatin was shown to undergo a dramatic reorganization in M-phase and to be restored in early G~1~ phase [@Naumova2013].
-- These dynamics during cell-cicle rais the question of how the patern of 3D organization is re-established with each cell division.
+- These dynamics during cell-cycle raise the question of how the pattern of 3D organization is re-established with each cell division.
 
 ### Charmatin dynamics across cell types
 <!-- - Variablity between cell types and conditions -->
 <!-- - Cell-type invariant TADs   -->
   
 The primary domain architecture of chromatin is largely preserved in different cell types and even across species [@Dixon2012; @Rao2014].
-However, chromatin dynamics specify distinct gene expression programmes and biological functions [@Bonev2016].
+However, chromatin dynamics specify distinct gene expression programs and biological functions [@Bonev2016].
 One example of dynamic chromatin organization ins dosage compensation, in the X chromosome is transcriptionally inactivated in human female cells. 
 Whereas normal TAD structures were observed on the active X chromosome, only two very large domains were identified on the inactive X chromosome in *Drosophila* and human [@Deng2015; @Rao2014].
-Other examples include differences in terminally differentiated post-mitotic cells. For example, rod photoreceptor cells in nocturnal mammals have an unusual, inverted nuclear architecture, in which heterochromatin is enriched in the center of the nucleus and is absent from the periphery [@Solovei2013]. 
+Other examples include differences in terminally differentiated post-mitotic cells. For example, rod photo-receptor cells in nocturnal mammals have an unusual, inverted nuclear architecture, in which heterochromatin is enriched in the center of the nucleus and is absent from the periphery [@Solovei2013]. 
 Further biological processes related to cell cycle exit, strongly affect chromatin three-dimensional organization. These are quiescence in yeast, where intrachromosomal contacts increase [@Rutledge2015], and senescence, where heterochromatin relocalizes from the nuclear periphery to the interior [@Chandra2015].
 
 Subtler effects of changes in chromatin reorganization are observed during biological processes such as cell differentiation and signaling [@Bonev2016].
@@ -181,8 +181,6 @@ Also in B cell differentiation, several regions change compartment identity and 
 
 The dynamics of chromatin architecture were also studied in response to stimuli, such as hormone signaling by progestin or estradiol. Despite large changes in the transcriptional activity, only small changes were observed in the domain organization of chromatin [@LeDily2014]. 
 However, often the entire TAD responded as a unit by changing histone modifications and switching between A and B compartment. This suggests, that transcription status is coordinated within TADs.
-
-
 
 ## Chromatin organization and evolution
 - Evolution of chromatin architecture
@@ -222,13 +220,13 @@ functional building blocks, in which genes regulation is coordinated.
 
 ## Structure of this thesis
 
-The followig four chapters adress and discuss these questions. 
+The following four chapters dress and discuss these questions. 
 First, we focus on duplicated genes in the human genome. Because of
 their related sequence and function, shared evolutionary history, and
 close colocalization in the genome they represent an interesting model
 to study how genome folding is related to regulation of gene expression
 during evolution (Chapter \@ref(paralog-regulation)). 
-We analyze whole-genome alignement between human and other vertebrate genomes to systematically
+We analyze whole-genome alignment between human and other vertebrate genomes to systematically
 investigate whether TADs represent conserved building blocks of genomes
 and whether rearrangements of TADs lead to altered gene expression
 programs (Chapter \@ref(TAD-evolution)). 
