--- a/index.Rmd
+++ b/index.Rmd
@@ -18,7 +18,7 @@ classoption: [
   captions=tableabove, 
   draft=false]
 papersize: a4
-bibliography: [bib/PhD_clean.bib]
+bibliography: [bib/PhDclean.bib]
 biblio-style: unsrtnat
 csl: cell.csl
 link-citations: yes
