--- a/bib/PhDclean.bib
+++ b/bib/PhDclean.bib
@@ -77,6 +77,23 @@ url = {https://www.sciencedirect.com/science/article/pii/S1934590915005081?via{\
 volume = {17},
 year = {2015}
 }
+@article{Roukos2013,
+abstract = {Chromosome translocations are a hallmark of cancer cells. We have developed an experimental system to visualize the formation of translocations in living cells and apply it to characterize the spatial and dynamic properties of translocation formation. We demonstrate that translocations form within hours of the occurrence of double-strand breaks (DSBs) and that their formation is cell cycle-independent. Translocations form preferentially between prepositioned genome elements, and perturbation of key factors of the DNA repair machinery uncouples DSB pairing from translocation formation. These observations generate a spatiotemporal framework for the formation of translocations in living cells.},
+author = {Roukos, V and Voss, T C and Schmidt, C K and Lee, S and Wangsa, D and Misteli, T},
+doi = {10.1126/science.1237150},
+file = {:home/ibnsalem/Mendeley/Roukos et al. - 2013 - Spatial dynamics of chromosome translocations in living cells(2).pdf:pdf},
+isbn = {1095-9203 (Electronic)$\backslash$r0036-8075 (Linking)},
+issn = {1095-9203},
+journal = {Science},
+keywords = {*DNA Breaks, Double-Stranded,*Time-Lapse Imaging,*Translocation, Genetic,Animals,Bacterial Proteins/genetics,Carrier Proteins/genetics,Cell Cycle,DNA Repair,DNA-Activated Protein Kinase/antagonists {\&} inhibit,DNA-Binding Proteins/antagonists {\&} inhibitors,Green Fluorescent Proteins/genetics,High-Throughput Screening Assays,Lac Operon,Lac Repressors/genetics,Mice,Microscopy/methods,NIH 3T3 Cells,Neoplasms/genetics,Nuclear Proteins/antagonists {\&} inhibitors},
+number = {6146},
+pages = {660--664},
+pmid = {23929981},
+title = {{Spatial dynamics of chromosome translocations in living cells}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/23929981},
+volume = {341},
+year = {2013}
+}
 @article{Petryszak2015,
 author = {Petryszak, Robert and Keays, Maria and Tang, Y. Amy and Fonseca, Nuno A. and Barrera, Elisabet and Burdett, Tony and F{\"{u}}llgrabe, Anja and Fuentes, Alfonso Mu{\~{n}}oz-Pomer and Jupp, Simon and Koskinen, Satu and Mannion, Oliver and Huerta, Laura and Megy, Karine and Snow, Catherine and Williams, Eleanor and Barzine, Mitra and Hastings, Emma and Weisser, Hendrik and Wright, James and Jaiswal, Pankaj and Huber, Wolfgang and Choudhary, Jyoti and Parkinson, Helen E. and Brazma, Alvis},
 doi = {10.1093/nar/gkv1045},
@@ -635,6 +652,26 @@ title = {{Spatial partitioning of the regulatory landscape of the X-inactivation
 url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3555144{\&}tool=pmcentrez{\&}rendertype=abstract},
 volume = {485},
 year = {2012}
+}
+@article{Filippova2014,
+abstract = {Chromosome conformation capture experiments have led to the discovery of dense, contiguous, megabase-sized topological domains that are similar across cell types and conserved across species. These domains are strongly correlated with a number of chromatin markers and have since been included in a number of analyses. However, functionally-relevant domains may exist at multiple length scales. We introduce a new and efficient algorithm that is able to capture persistent domains across various resolutions by adjusting a single scale parameter. The ensemble of domains we identify allows us to quantify the degree to which the domain structure is hierarchical as opposed to overlapping, and our analysis reveals a pronounced hierarchical structure in which larger stable domains tend to completely contain smaller domains. The identified novel domains are substantially different from domains reported previously and are highly enriched for insulating factor CTCF binding and histone marks at the boundaries.},
+annote = {IMR90 and mESC domains and code:
+http://www.cs.cmu.edu/{\~{}}ckingsf/software/armatus/},
+author = {Filippova, Darya and Patro, Rob and Duggal, Geet and Kingsford, Carl},
+doi = {10.1186/1748-7188-9-14},
+file = {:home/ibnsalem/Mendeley/Filippova et al. - 2014 - Identification of alternative topological domains in chromatin(2).pdf:pdf},
+issn = {1748-7188},
+journal = {Algorithms for molecular biology : AMB},
+keywords = {Alternative topological domains,Chromatin conforma,alternative topological domains,chromatin conformation capture,dynamic programming},
+month = {jan},
+number = {1},
+pages = {14},
+pmid = {24868242},
+publisher = {Algorithms for Molecular Biology},
+title = {{Identification of alternative topological domains in chromatin.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=4019371{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {9},
+year = {2014}
 }
 @article{LeDily2014,
 annote = {={\textgreater} Transcription status is coordinated within a TAD
@@ -5798,6 +5835,22 @@ title = {{Disentangling the many layers of eukaryotic transcriptional regulation
 url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=4295906{\&}tool=pmcentrez{\&}rendertype=abstract},
 volume = {46},
 year = {2012}
+}
+@article{Branco2006,
+abstract = {After mitosis, mammalian chromosomes partially decondense to occupy distinct territories in the cell nucleus. Current models propose that territories are separated by an interchromatin domain, rich in soluble nuclear machinery, where only rare interchromosomal interactions can occur via extended chromatin loops. In contrast, recent evidence for chromatin mobility and high frequency of chromosome translocations are consistent with significant levels of chromosome intermingling, with important consequences for genome function and stability. Here we use a novel high-resolution in situ hybridization procedure that preserves chromatin nanostructure to show that chromosome territories intermingle significantly in the nucleus of human cells. The degree of intermingling between specific chromosome pairs in human lymphocytes correlates with the frequency of chromosome translocations in the same cell type, implying that double-strand breaks formed within areas of intermingling are more likely to participate in interchromosomal rearrangements. The presence of transcription factories in regions of intermingling and the effect of transcription impairment on the interactions between chromosomes shows that transcription-dependent interchromosomal associations shape chromosome organization in mammalian cells. These findings suggest that local chromatin conformation and gene transcription influence the extent with which chromosomes interact and affect their overall properties, with direct consequences for cell-type specific genome stability.},
+annote = {- correlation between the degree of intermingling of chrom pairs in translocation frequencies},
+author = {Branco, Miguel R. and Pombo, Ana},
+doi = {10.1371/journal.pbio.0040138},
+file = {:home/ibnsalem/Mendeley/Branco, Pombo - 2006 - Intermingling of chromosome territories in interphase suggests role in translocations and transcription-dependent.pdf:pdf},
+isbn = {1545-7885 (Electronic)},
+issn = {15457885},
+journal = {PLoS Biology},
+number = {5},
+pages = {780--788},
+pmid = {16623600},
+title = {{Intermingling of chromosome territories in interphase suggests role in translocations and transcription-dependent associations}},
+volume = {4},
+year = {2006}
 }
 @article{Flomen1998,
 abstract = {The autosomal dominant disorder Rieger syndrome (RIEG) shows genetic heterogeneity and has a phenotype characterized by malformations of the anterior segment of the eye, failure of the periumbilical skin to involute, and dental hypoplasia. The main locus for RIEG was mapped to the 4q25–q27 chromosomal segment using a series of cytogenetic abnormalities as well as by genetic linkage to DNA markers. Recently, abicoid-related homeobox transcription factor gene calledRIEGhas been cloned, characterized, and proven to cause the 4q25 linked RIEG. Its mode of action in the pathogenesis of RIEG was not conclusively proven, since most etiological mutations detected in theRIEGsequence caused amino acid substitutions or splice changes in the homeodomain. Through FISH analysis of a 460-kb sequence-ready map (PAC contig) aroundRIEGthat we report in this paper, we demonstrate that the 4q25 linked RIEG disorder can arise from the haploid, whole-gene deletion ofRIEG, but also from a translocation break 90 kb upstream from the gene. The data provide conclusive evidence that physical or functional haploinsufficiency of RIEG is the pathogenic mechanism for Rieger syndrome. The map also defines restriction fragments bearing sequences with a potential key regulatory role in the control of homeobox gene expression.},
