--- a/bib/PhDclean.bib
+++ b/bib/PhDclean.bib
@@ -1,3 +1,19 @@
+@article{Chubb2002,
+abstract = {Background: In comparison with many nuclear proteins, the movement of chromatin in nuclei appears to be generally constrained. These restrictions on motion are proposed to reflect the attachment of chromatin to immobile nuclear substructures. Results: To gain insight into the regulation of chromosome dynamics by nuclear architecture, we have followed the movements of different sites in the human genome in living cells. Here, we show that loci at nucleoli or the nuclear periphery are significantly less mobile than other, more nucleoplasmic loci. Disruption of nucleoli increases the mobility of nucleolar-associated loci. Conclusions: This is the first report of distinct nuclear substructures constraining the movements of chromatin. These constraints reflect the physical attachment of chromatin to nuclear compartments or steric impairment caused by local ultrastructure. Our data suggest a role for the nucleolus and nuclear periphery in maintaining the three-dimensional organization of chromatin in the human nucleus.},
+author = {Chubb, Jonathan R and Boyle, Shelagh and Perry, Paul and Bickmore, Wendy A},
+doi = {10.1016/S0960-9822(02)00695-4},
+file = {:home/ibnsalem/Mendeley/Chubb et al. - 2002 - Chromatin Motion Is Constrained by Association with Nuclear Compartments in Human Cells.pdf:pdf},
+issn = {0960-9822},
+journal = {Current Biology},
+month = {mar},
+number = {6},
+pages = {439--445},
+publisher = {Cell Press},
+title = {{Chromatin Motion Is Constrained by Association with Nuclear Compartments in Human Cells}},
+url = {https://www.sciencedirect.com/science/article/pii/S0960982202006954},
+volume = {12},
+year = {2002}
+}
 @article{Nambiar2011,
 author = {Nambiar, M. and Raghavan, S. C.},
 doi = {10.1093/nar/gkr223},
@@ -5906,6 +5922,7 @@ year = {2012}
 @article{Redin2017,
 author = {Redin, Claire and Brand, Harrison and Collins, Ryan L and Kammin, Tammy and Mitchell, Elyse and Hodge, Jennelle C and Hanscom, Carrie and Pillalamarri, Vamsee and Seabra, Catarina M and Abbott, Mary-Alice and Abdul-Rahman, Omar A and Aberg, Erika and Adley, Rhett and Alcaraz-Estrada, Sofia L and Alkuraya, Fowzan S and An, Yu and Anderson, Mary-Anne and Antolik, Caroline and Anyane-Yeboa, Kwame and Atkin, Joan F and Bartell, Tina and Bernstein, Jonathan A and Beyer, Elizabeth and Blumenthal, Ian and Bongers, Ernie M H F and Brilstra, Eva H and Brown, Chester W and Br{\"{u}}ggenwirth, Hennie T and Callewaert, Bert and Chiang, Colby and Corning, Ken and Cox, Helen and Cuppen, Edwin and Currall, Benjamin B and Cushing, Tom and David, Dezso and Deardorff, Matthew A and Dheedene, Annelies and D'Hooghe, Marc and de Vries, Bert B A and Earl, Dawn L and Ferguson, Heather L and Fisher, Heather and FitzPatrick, David R and Gerrol, Pamela and Giachino, Daniela and Glessner, Joseph T and Gliem, Troy and Grady, Margo and Graham, Brett H and Griffis, Cristin and Gripp, Karen W and Gropman, Andrea L and Hanson-Kahn, Andrea and Harris, David J and Hayden, Mark A and Hill, Rosamund and Hochstenbach, Ron and Hoffman, Jodi D and Hopkin, Robert J and Hubshman, Monika W and Innes, A Micheil and Irons, Mira and Irving, Melita and Jacobsen, Jessie C and Janssens, Sandra and Jewett, Tamison and Johnson, John P and Jongmans, Marjolijn C and Kahler, Stephen G and Koolen, David A and Korzelius, Jerome and Kroisel, Peter M and Lacassie, Yves and Lawless, William and Lemyre, Emmanuelle and Leppig, Kathleen and Levin, Alex V and Li, Haibo and Li, Hong and Liao, Eric C and Lim, Cynthia and Lose, Edward J and Lucente, Diane and Macera, Michael J and Manavalan, Poornima and Mandrile, Giorgia and Marcelis, Carlo L and Margolin, Lauren and Mason, Tamara and Masser-Frye, Diane and McClellan, Michael W and Mendoza, Cinthya J Zepeda and Menten, Bj{\"{o}}rn and Middelkamp, Sjors and Mikami, Liya R and Moe, Emily and Mohammed, Shehla and Mononen, Tarja and Mortenson, Megan E and Moya, Graciela and Nieuwint, Aggie W and Ordulu, Zehra and Parkash, Sandhya and Pauker, Susan P and Pereira, Shahrin and Perrin, Danielle and Phelan, Katy and Aguilar, Raul E Pi{\~{n}}a and Poddighe, Pino J and Pregno, Giulia and Raskin, Salmo and Reis, Linda and Rhead, William and Rita, Debra and Renkens, Ivo and Roelens, Filip and Ruliera, Jayla and Rump, Patrick and Schilit, Samantha L P and Shaheen, Ranad and Sparkes, Rebecca and Spiegel, Erica and Stevens, Blair and Stone, Matthew R and Tagoe, Julia and Thakuria, Joseph V and van Bon, Bregje W and van de Kamp, Jiddeke and {van Der Burgt}, Ineke and van Essen, Ton and van Ravenswaaij-Arts, Conny M and van Roosmalen, Markus J and Vergult, Sarah and Volker-Touw, Catharina M L and Warburton, Dorothy P and Waterman, Matthew J and Wiley, Susan and Wilson, Anna and {Yerena-de Vega}, Maria de la Concepcion A and Zori, Roberto T and Levy, Brynn and Brunner, Han G and de Leeuw, Nicole and Kloosterman, Wigard P and Thorland, Erik C and Morton, Cynthia C and Gusella, James F and Talkowski, Michael E},
 doi = {10.1038/ng.3720},
+file = {:home/ibnsalem/Mendeley/ng.3720.pdf:pdf},
 issn = {1061-4036},
 journal = {Nature Genetics},
 month = {jan},
