--- a/bib/PhDclean.bib
+++ b/bib/PhDclean.bib
@@ -1,18 +1,18 @@
-@article{Chubb2002,
-abstract = {Background: In comparison with many nuclear proteins, the movement of chromatin in nuclei appears to be generally constrained. These restrictions on motion are proposed to reflect the attachment of chromatin to immobile nuclear substructures. Results: To gain insight into the regulation of chromosome dynamics by nuclear architecture, we have followed the movements of different sites in the human genome in living cells. Here, we show that loci at nucleoli or the nuclear periphery are significantly less mobile than other, more nucleoplasmic loci. Disruption of nucleoli increases the mobility of nucleolar-associated loci. Conclusions: This is the first report of distinct nuclear substructures constraining the movements of chromatin. These constraints reflect the physical attachment of chromatin to nuclear compartments or steric impairment caused by local ultrastructure. Our data suggest a role for the nucleolus and nuclear periphery in maintaining the three-dimensional organization of chromatin in the human nucleus.},
-author = {Chubb, Jonathan R and Boyle, Shelagh and Perry, Paul and Bickmore, Wendy A},
-doi = {10.1016/S0960-9822(02)00695-4},
-file = {:home/ibnsalem/Mendeley/Chubb et al. - 2002 - Chromatin Motion Is Constrained by Association with Nuclear Compartments in Human Cells.pdf:pdf},
-issn = {0960-9822},
-journal = {Current Biology},
+@article{Walter2003,
+abstract = {Whether chromosomes maintain their nuclear positions during interphase and from one cell cycle to the next has been controversially discussed. To address this question, we performed long-term live-cell studies using a HeLa cell line with GFP-tagged chromatin. Positional changes of the intensity gravity centers of fluorescently labeled chromosome territories (CTs) on the order of several microm were observed in early G1, suggesting a role of CT mobility in establishing interphase nuclear architecture. Thereafter, the positions were highly constrained within a range of approximately 1 microm until the end of G2. To analyze possible changes of chromosome arrangements from one cell cycle to the next, nuclei were photobleached in G2 maintaining a contiguous zone of unbleached chromatin at one nuclear pole. This zone was stably preserved until the onset of prophase, whereas the contiguity of unbleached chromosome segments was lost to a variable extent, when the metaphase plate was formed. Accordingly, chromatin patterns observed in daughter nuclei differed significantly from the mother cell nucleus. We conclude that CT arrangements were stably maintained from mid G1 to late G2/early prophase, whereas major changes of CT neighborhoods occurred from one cell cycle to the next. The variability of CT neighborhoods during clonal growth was further confirmed by chromosome painting experiments.},
+author = {Walter, Joachim and Schermelleh, Lothar and Cremer, Marion and Tashiro, Satoshi and Cremer, Thomas},
+doi = {10.1083/jcb.200211103},
+issn = {0021-9525},
+journal = {The Journal of cell biology},
 month = {mar},
-number = {6},
-pages = {439--445},
-publisher = {Cell Press},
-title = {{Chromatin Motion Is Constrained by Association with Nuclear Compartments in Human Cells}},
-url = {https://www.sciencedirect.com/science/article/pii/S0960982202006954},
-volume = {12},
-year = {2002}
+number = {5},
+pages = {685--97},
+pmid = {12604593},
+publisher = {Rockefeller University Press},
+title = {{Chromosome order in HeLa cells changes during mitosis and early G1, but is stably maintained during subsequent interphase stages.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/12604593 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC2173351},
+volume = {160},
+year = {2003}
 }
 @article{Nambiar2011,
 author = {Nambiar, M. and Raghavan, S. C.},
@@ -6423,6 +6423,22 @@ pmid = {26940867},
 title = {{Activation of proto-oncogenes by disruption of chromosome neighborhoods.}},
 volume = {351},
 year = {2016}
+}
+@article{Chubb2002,
+abstract = {Background: In comparison with many nuclear proteins, the movement of chromatin in nuclei appears to be generally constrained. These restrictions on motion are proposed to reflect the attachment of chromatin to immobile nuclear substructures. Results: To gain insight into the regulation of chromosome dynamics by nuclear architecture, we have followed the movements of different sites in the human genome in living cells. Here, we show that loci at nucleoli or the nuclear periphery are significantly less mobile than other, more nucleoplasmic loci. Disruption of nucleoli increases the mobility of nucleolar-associated loci. Conclusions: This is the first report of distinct nuclear substructures constraining the movements of chromatin. These constraints reflect the physical attachment of chromatin to nuclear compartments or steric impairment caused by local ultrastructure. Our data suggest a role for the nucleolus and nuclear periphery in maintaining the three-dimensional organization of chromatin in the human nucleus.},
+author = {Chubb, Jonathan R and Boyle, Shelagh and Perry, Paul and Bickmore, Wendy A},
+doi = {10.1016/S0960-9822(02)00695-4},
+file = {:home/ibnsalem/Mendeley/Chubb et al. - 2002 - Chromatin Motion Is Constrained by Association with Nuclear Compartments in Human Cells.pdf:pdf},
+issn = {0960-9822},
+journal = {Current Biology},
+month = {mar},
+number = {6},
+pages = {439--445},
+publisher = {Cell Press},
+title = {{Chromatin Motion Is Constrained by Association with Nuclear Compartments in Human Cells}},
+url = {https://www.sciencedirect.com/science/article/pii/S0960982202006954},
+volume = {12},
+year = {2002}
 }
 @incollection{Zhou2012,
 abstract = {This unit describes the Wash U Epigenome Browser, a next-generation genomic data visualization system. The Browser currently hosts ENCODE and Roadmap Epigenomics data for human and model organisms. The Browser displays many sequencing-based data sets across all or part of the genome, on specific gene sets or pathways, and in the context of their metadata. Investigators can order, filter, aggregate, classify, and display data interactively based on given feature sets including metadata features, annotated biological pathways, and user-defined collections of genes or genomic coordinates. Further, statistical tests can be performed on selected data. Individual labs can upload their sequencing or array-based data as custom tracks and display them in the context of consortium data, allowing for direct comparisons. The Browser is an increasingly important and widely accessible tool for deriving biological insights from unprecedented amounts of high-quality genomic, epigenomic, and expression data.},
