--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -11,6 +11,11 @@ Another layer in gene regulation is the three-dimensional folding structure of c
 However, most of the cell-type specific gene regulation that accounts for cell differentiation in development and morphological diversification in evolution, are driven by activation changes of enhancers [@Long2016].
 
 
+- The initial sequencing of the human genome reviled a large resource of information on the genetic sequence, however, we are still far from complete understanding of the sequence itself. While functional knowledge of individual genes and its activity, evolution and associations to diseases accumulates over the last years, the non-coding parts of the genome is only very recently annotated in large collaborative efforts [cite ENCODE, Epi-Genome-Roadmap, FANTOM]. These efforts lead to an increased understanding of the regulatory potential of non-coding regions and its dynamics across conditions. 
+However, the genome is still largely considered as 
+- From 1D to 3D
+
+
 ## Enhancers
 
 Enhancers were originally defined as genomic regions that enhance the expression of a reporter gene, when placed experimentally in front of a minimal promoter. 
@@ -146,7 +151,6 @@ Importantly, enhancer-promoter interactions seems to be mostly constrained withi
 Altogether, there is accumulating evidence that TADs are fundamental units of chromosome organization [@Dixon2016]
 
 
-
 ### Chromatin loops
 
 In summary, these findings suggest a hierarchical organization of chromosome architecture. First, dynamic nucleosome contacts from clutches and fibers. 
@@ -162,7 +166,7 @@ After cell division, chromosomes decondense and fold into the interphase hierarc
 - The topological organization of chromatin was shown to undergo a dramatic reorganization in M-phase and to be restored in early G~1~ phase [@Naumova2013].
 - These dynamics during cell-cycle raise the question of how the pattern of 3D organization is re-established with each cell division.
 
-### Charmatin dynamics across cell types
+### Variation of chromatin structure across cell types
 <!-- - Variablity between cell types and conditions -->
 <!-- - Cell-type invariant TADs   -->
   
@@ -191,46 +195,56 @@ However, often the entire TAD responded as a unit by changing histone modificati
 
 
 ## Aims of this thesis
-In this PhD thesis, I analyze TADs and chromatin interactions with
-respect to gene expression regulation. More specifically, we find out
-weather TADs represent only structural units of the genome or also
-functional building blocks, in which genes regulation is coordinated.
+The recent advances of genome-wide ligation proximity mapping revealed that 
+interphase chromosomes are highly organized and structurally segregate into TADs.
+At the start of this thesis project in 2014, TADs were already shown to be related to diverse genomic functions such as replication timing, epigenetic marks, and gene regulation. 
+We previously showed a significant association of TAD disruptions by large chromosomal deletions with clinical phenotypes, likely caused by an enhancer adaption mechanism [@Ibn-Salem2014].
+However, it is still unclear how and why the genome folds into TADs.
+For example, it is not clear to which extends genes within the same TAD are expressed and regulated in a coordinated manner. Despite initial evidence of evolutionary conservation of TADs in homologous regions between human and mouse, there was no systematic analysis of the stability of TADs during evolution and the consequences of TAD disruptions on gene expression during evolution. The accumulating evidence of the important gene regulatory function of TADs leads to the question if TADs play an important role in genetic diseases. More specifically, TADs might be used together with other genomic annotations, such as enhancers and their measured or predicted interactions with genes to interpret structural variations in patient genomes. 
+Furthermore, increasing mechanistic understanding of chromatin looping interactions and TADs could be used to improve genome-wide contact maps and predict long-range interactions in diverse tissues and conditions.
+Therefore, this thesis addresses the question whether TADs represent only structural units of the genome or also important functional building blocks in which genes regulation is coordinated.
+By computationally integrating genome-wide chromatin interaction maps and with diverse genomic datasets, including sequence conservation, regulatory activity, protein binding, gene expression and clinical phenotypes, I address the following questions.  
 
 
-### Is the three-dimensional folding of genomes associated with co-regulation of functionally related genes?  {-}
-- How are duplicated genes during evolution distributed in the three-dimensional genome architecture? 
-- Can TADs provide a regulatory environment for co-regulation of duplicated genes?
-- (Are TADs functional genomic units in which genes are co-regulated?)
-- (Are paralog genes co-regulated in the 3D chromatin architecture of genomes?)
+**Is the three-dimensional folding structure of genomes associated with co-regulation of functionally related genes?**
 
-### Are TADs functional building blocks of genomes and subjected to selective pressure during evolution? {-}
-- Are TADs conserved during evolution or disrupted by rearrangements?
-- Are changes of TADs during evolution associated with changes in gene expression profiles?
-- (Are TADs stable units that are often transmitted as a whole than disrupted by rearrangements?)
 
-### Is the disruption of TADs by rearrangements also associated to genetic diseases? {-}
-- Can TADs be used to interpret position effects of rearrangements in genetic diseases?
-- Can chromatin interaction data and TADs be integrated with phenotype data to predict pathomechanism of balanced chromosomal rearrangements?
+- How are paralog genes distributed in the linear genome and in the three-dimensional genome architecture? 
+- Are paralogs co-regulated with shared enhancers and located in the same TAD in genomes of human and other species?
+- Finally, can we learn about the evolutionary history of genes and how they are created within regulatory environments of TADs?
 
-### Can chromatin looping interactions be predicted by ChIP-seq and sequence features? {-}
-- Are there signals form TF ChIP-seq data at chromatin looping anchors that predict long-range contacts?
-- Does the gnomic sequence encode features that are predictive for chromatin looping interactions?
+**Are TADs functional building blocks of genomes and subjected to selective pressure during evolution?**
+
+- Are human TAD regions conserved during evolution or disrupted by rearrangements when compared to other vertebrate genomes?
+- Have genes within TADs a more conserved expression profile across different tissues?
+- Are disruptions of TADs during evolution associated with changes in gene expression profiles?
+
+
+**Can clinical phenotypes be explained by rearrangements affecting TADs and the regulation of relevant genes?**
+
+- Can TADs be used to interpret gene regulatory effects of balanced chromosomal rearrangements in whole-genome sequenced patients?
+- How can we quantify the similarity of phenotypes observed in patients and phenotypes associated with genes in order to prioritize candidate genes?
+- Can we provide a computational tool to integrate functional genomic elements, chromatin interaction data, and TADs with phenotype data of patients to predict pathomechanism of structural variations?
+
+**Can ChIP-seq signals and sequence features predict chromatin looping interactions?**
+
+- Does the cross-linking effect in ChIP-seq provide specific signals at interacting chromatin loop anchors? 
+- Does the genomic sequence encode features that are predictive for long-range chromatin interactions?
 - Can we provide a computational method to predict chromatin looping interactions in specific cell-types and conditions of interest?
+- Which transcription factors are most predictive and eventually functionally involved in chromatin looping?
+
 
 
 ## Structure of this thesis
 
-The following four chapters dress and discuss these questions. 
-First, we focus on duplicated genes in the human genome. Because of
+The following four chapters address and discuss the questions raised above. 
+First, the focus is on duplicated genes in the human genome. Because of
 their related sequence and function, shared evolutionary history, and
 close colocalization in the genome they represent an interesting model
 to study how genome folding is related to regulation of gene expression
 during evolution (Chapter \@ref(paralog-regulation)). 
-We analyze whole-genome alignment between human and other vertebrate genomes to systematically
-investigate whether TADs represent conserved building blocks of genomes
-and whether rearrangements of TADs lead to altered gene expression
-programs (Chapter \@ref(TAD-evolution)). 
-Next, we will address disruption of
+Next, whole-genome alignment between human and other vertebrate genomes are used to systematically investigate whether TADs represent conserved building blocks of genomes and whether rearrangements of TADs lead to altered gene expression programs (Chapter \@ref(TAD-evolution)). 
+Furhter, we will address disruption of
 chromatin organization by analyzing disease associated rearrangement
 breakpoints from whole-genome sequenced patients of various genetic
 diseases to explain miss-regulation by disruption of TADs and chromatin
@@ -242,4 +256,3 @@ genomic data, with the aim to facilitate the association of TF binding sites
 in enhancers to regulated genes in many cell types and condition, for
 which Hi-C like data is not available (Chapter \@ref(loop-prediction)).
 The overall findings are then discussed together with further research perspectives (Chapter \@ref(thesis-discussion)).
-
